<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.AboutActivity">
    <!-- Toolbar !-->
    <include
        layout="@layout/toolbar_settings"/>
    <!-- About Content !-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical">
        <!-- Logo & Title !-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!-- Logo !-->
            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                app:srcCompat="@drawable/app_icon"
                app:tint="@null"/>
            <!-- Title !-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="28sp"
                android:text="@string/app_name" />
        </LinearLayout>
        <!-- App Details !-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!-- Author !-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Onur KOL"
                android:textSize="18sp"
                android:textColor="@color/primary"/>
            <!-- App Version Info !-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">
                <!-- Version Text !-->
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:text="@string/version_text"
                    android:textSize="18sp"/>
                <!-- : !-->
                <TextView
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"
                    android:text=":"
                    android:textSize="20sp"/>
                <!-- APP_VERSION !-->
                <TextView
                    android:id="@+id/appVersion"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingStart="10dp"
                    android:text="VERSION_TEXT"
                    android:textSize="18sp"
                    android:textColor="@color/primary"/>
            </LinearLayout>
            <!-- Contact Info !-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:orientation="vertical">
                <!-- Title !-->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/contact_text"
                    android:textSize="24sp"/>
                <!-- Web Pages !-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <!-- Web Page !-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <!-- Web Page Text !-->
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.6"
                            android:text="@string/web_page_text"
                            android:textSize="18sp"/>
                        <!-- Button !-->
                        <Button
                            android:id="@+id/webButton"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/open_page_text" />
                    </LinearLayout>
                    <!-- Github !-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <!-- Web Page Text !-->
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.6"
                            android:text="Github"
                            android:textSize="18sp"/>
                        <!-- Button !-->
                        <Button
                            android:id="@+id/githubButton"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/open_page_text" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>